--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -10,53 +10,56 @@
   <a href="{% url 'company_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New company</a>
 {% endblock panel_actions %}
 {% block panel_content %}
-  <div class="table-responsive pt-3">
-    <table class="table table-sm table-hover">
-      <thead>
-        <tr>
-          <th>Company</th>
-          <th width="25%" class="d-none d-lg-table-cell">Description</th>
-          <th class="text-center d-none d-lg-table-cell">Manufactured</th>
-          <th class="text-center d-none d-lg-table-cell">Supplied</th>
-          <th class="ps-3 d-none d-lg-table-cell">Phone</th>
-          <th>Website</th>
-          <th class="d-none d-lg-table-cell">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for company in companies %}
-          <tr>
-            <td class="align-middle">
-              <a href="{% url 'company_detail' company.pk %}">{{ company.name }}</a>
-            </td>
-            <td class="d-none d-lg-table-cell small">{{ company.description|truncatechars:50 }}</td>
-            <td class="text-center d-none d-lg-table-cell">
-              <span><a href="{% url 'company_detail' company.pk %}#manufactured">{{ company.manufactured_items.count|default:"" }}</a></span>
-            </td>
-            <td class="text-center d-none d-lg-table-cell">
-              <span><a href="{% url 'company_detail' company.pk %}#supplied">{{ company.supplied_items.count|default:"" }}</a></span>
-            </td>
-            <td class="ps-3 d-none d-lg-table-cell">{{ company.phone }}</td>
-            <td>
-              <a href="{{ company.website }}"
-                 title="Visit {{ company.website }}"
-                 target="_blank">{{ company.website }}</a>
-            </td>
-            <td class="d-none d-lg-table-cell">
-              <span class="tooltray-container d-none">
-                <a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a>
-                <a hx-get="{% url 'company_delete' company.pk %}"
-                   hx-trigger="click"
-                   hx-target="#crudModal .modal-content"
-                   hx-swap="innerHTML"
-                   data-bs-toggle="modal"
-                   data-bs-target="#crudModal"
-                   href="javascript:"><i class="bi bi-trash"></i></a>
-              </span>
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+  <div class="container-fluid pt-3">
+    <!-- Headers -->
+    <div class="row g-2 mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
+      <div class="col-3">Company</div>
+      <div class="col-2">Description</div>
+      <div class="col-1 text-center">Manufactured</div>
+      <div class="col-1 text-center">Supplied</div>
+      <div class="col-2">Phone</div>
+      <div class="col-2">Website</div>
+      <div class="col-1">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</div>
+    </div>
+    <!-- Rows for Each Company -->
+    {% for company in companies %}
+      <div class="row g-2 mb-2 border-top align-items-center">
+        <!-- Company Name -->
+        <div class="col-6 col-lg-3 align-middle">
+          <a href="{% url 'company_detail' company.pk %}">{{ company.name }}</a>
+        </div>
+        <!-- Description -->
+        <div class="col-lg-2 d-none d-lg-block small">{{ company.description|truncatechars:50 }}</div>
+        <!-- Manufactured Count -->
+        <div class="col-lg-1 text-center d-none d-lg-block">
+          <a href="{% url 'company_detail' company.pk %}#manufactured">{{ company.manufactured_items.count|default:"" }}</a>
+        </div>
+        <!-- Supplied Count -->
+        <div class="col-lg-1 text-center d-none d-lg-block">
+          <a href="{% url 'company_detail' company.pk %}#supplied">{{ company.supplied_items.count|default:"" }}</a>
+        </div>
+        <!-- Phone -->
+        <div class="col-lg-2 d-none d-lg-block">{{ company.phone }}</div>
+        <!-- Website -->
+        <div class="col-lg-2 d-none d-lg-block">
+          <a href="{{ company.website }}"
+             title="Visit {{ company.website }}"
+             target="_blank">{{ company.website }}</a>
+        </div>
+        <!-- Actions -->
+        <div class="col-lg-1 d-none d-lg-block">
+          <span class="tooltray-container d-none">
+            <a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a>
+            <a hx-get="{% url 'company_delete' company.pk %}"
+               hx-trigger="click"
+               hx-target="#crudModal .modal-content"
+               hx-swap="innerHTML"
+               data-bs-toggle="modal"
+               data-bs-target="#crudModal"
+               href="javascript:"><i class="bi bi-trash"></i></a>
+          </span>
+        </div>
+      </div>
+    {% endfor %}
   </div>
 {% endblock panel_content %}
