--- a/item/templates/stock/stock_list.html
+++ b/item/templates/stock/stock_list.html
@@ -64,22 +64,22 @@
             {# stock properties #}
             <div class="callout callout-light m-0 p-1">
               <div class="row g-0">
-                <div class="col-6 col-sm-3 text-muted">Product Id:</div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-lg-3 text-muted">Product Id:</div>
+                <div class="col-6 col-lg-3">
                   <a href="{{ stock.source_url }}" title="{{ stock.source.name }} details">{{ stock.source.product_id }}</a>
                 </div>
-                <div class="col-6 col-sm-3 text-muted">Lot number:</div>
-                <div class="col-6 col-sm-3">{{ stock.lot_number }}</div>
+                <div class="col-6 col-lg-3 text-muted">Lot number:</div>
+                <div class="col-6 col-lg-3">{{ stock.lot_number }}</div>
               </div>
               <div class="row g-0">
-                <div class="col-6 col-sm-3 text-muted">Expires on:</div>
-                <div class="col-6 col-sm-3">{{ stock.expiry_date|date:"d/m/Y" }}</div>
-                <div class="col-6 col-sm-3 text-muted">Received:</div>
-                <div class="col-6 col-sm-3">{{ stock.delivery_date|date:"d/m/Y" }}</div>
+                <div class="col-6 col-lg-3 text-muted">Expires on:</div>
+                <div class="col-6 col-lg-3">{{ stock.expiry_date|date:"d/m/Y" }}</div>
+                <div class="col-6 col-lg-3 text-muted">Received:</div>
+                <div class="col-6 col-lg-3">{{ stock.delivery_date|date:"d/m/Y" }}</div>
               </div>
               <div class="row g-0">
-                <div class="col-6 col-sm-3 text-muted">Validation:</div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-lg-3 text-muted">Validation:</div>
+                <div class="col-6 col-lg-3">
                   {% if stock.validations.all|length %}
                     {% for sv in stock.validations.all %}
                       {% validation_status sv.validation.status True %}
@@ -88,8 +88,8 @@
                     {% validation_status "PENDING" %}
                   {% endif %}
                 </div>
-                <div class="col-6 col-sm-3 text-muted">Condition:</div>
-                <div class="col-6 col-sm-3">{% delivery_condition stock.condition True %}</div>
+                <div class="col-6 col-lg-3 text-muted">Condition:</div>
+                <div class="col-6 col-lg-3">{% delivery_condition stock.condition True %}</div>
               </div>
             </div>
           </div>
