--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -10,48 +10,49 @@
   <a href="{% url 'location_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New location</a>
 {% endblock panel_actions %}
 {% block panel_content %}
-  <div class="table-responsive">
-    <table class="table table-sm table-hover">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th width="15%" class="d-none d-lg-table-cell">Room</th>
-          <th width="20%" class="d-none d-lg-table-cell">Description</th>
-          <th class="d-none d-lg-table-cell">Stock Items</th>
-          <th class="d-none d-lg-table-cell">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for location in locations %}
-          <tr class="align-middle">
-            <td>
-              <a href="{% url 'location_detail' location.pk %}">{{ location.name }}</a>
-            </td>
-            <td class="d-none d-lg-table-cell align-middle">{{ location.room_name|default_if_none:"" }}</td>
-            <td class="d-none d-lg-table-cell small">{{ location.description|truncatechars:150 }}</td>
-            <td class="d-none d-lg-table-cell small">
-              {% if location.stock_items|length %}
-                {% for stock in location.stock_items|slice:10 %}
-                  <a href="{% url 'stock_detail' stock.pk %}">{{ stock }}</a>
-                  {% if not forloop.last %},{% endif %}
-                {% endfor %}
-              {% endif %}
-            </td>
-            <td class="d-none d-lg-table-cell">
-              <span class="tooltray-container d-none">
-                <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
-                <a hx-get="{% url 'location_delete' location.pk %}"
-                   hx-trigger="click"
-                   hx-target="#crudModal .modal-content"
-                   hx-swap="innerHTML"
-                   data-bs-toggle="modal"
-                   data-bs-target="#crudModal"
-                   href="javascript:"><i class="bi bi-trash"></i></a>
-              </span>
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+  <div class="container-fluid pt-3">
+    <!-- Headers -->
+    <div class="row g-2 mb-2 d-none d-lg-flex text-muted fw-bold align-items-center">
+      <div class="col-3">Name</div>
+      <div class="col-2">Room</div>
+      <div class="col-3">Description</div>
+      <div class="col-3">Stock Items</div>
+      <div class="col-1">{% toggle_icon 'tooltray-trigger' 'tooltray-container' %}</div>
+    </div>
+    <!-- Rows for Each Location -->
+    {% for location in locations %}
+      <div class="row g-2 mb-2 border-top align-items-center">
+        <!-- Location Name -->
+        <div class="col-6 col-lg-3">
+          <a href="{% url 'location_detail' location.pk %}">{{ location.name }}</a>
+        </div>
+        <!-- Room -->
+        <div class="col-6 col-lg-2">{{ location.room_name|default_if_none:"" }}</div>
+        <!-- Description -->
+        <div class="col-lg-3 d-none d-lg-block small">{{ location.description|truncatechars:150 }}</div>
+        <!-- Stock Items -->
+        <div class="col-lg-3 d-none d-lg-block small">
+          {% if location.stock_items|length %}
+            {% for stock in location.stock_items|slice:10 %}
+              <a href="{% url 'stock_detail' stock.pk %}">{{ stock }}</a>
+              {% if not forloop.last %},{% endif %}
+            {% endfor %}
+          {% endif %}
+        </div>
+        <!-- Actions -->
+        <div class="col-lg-1 d-none d-lg-block">
+          <span class="tooltray-container d-none">
+            <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
+            <a hx-get="{% url 'location_delete' location.pk %}"
+               hx-trigger="click"
+               hx-target="#crudModal .modal-content"
+               hx-swap="innerHTML"
+               data-bs-toggle="modal"
+               data-bs-target="#crudModal"
+               href="javascript:"><i class="bi bi-trash"></i></a>
+          </span>
+        </div>
+      </div>
+    {% endfor %}
   </div>
 {% endblock panel_content %}
