--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -16,42 +16,28 @@
   </span>
 {% endblock panel_actions %}
 {% block panel_content %}
-  <div class="row p-3">
-    <div class="col">
-      <table class="table table-sm table-borderless">
-        <tbody>
-          <tr>
-            <td width="15%" class="text-muted">Name:</td>
-            <td width="85%">{{ company.name }}</td>
-          </tr>
-          <tr>
-            <td class="text-muted">Description:</td>
-            <td>{{ company.description }}</td>
-          </tr>
-          <tr>
-            <td class="text-muted">Website:</td>
-            <td>
-              <i class="bi bi-link-45deg"></i><a href="{{ company.website }}" target="_blank" title="company website">{{ company.website }}</a>
-            </td>
-          </tr>
-          <tr>
-            <td class="text-muted">Phone:</td>
-            <td>
-              <i class="bi bi-phone"></i> {{ company.phone }}
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <div class="row g-2 mb-3 p-3">
+    <div class="col-4 col-lg-2 text-muted">Name:</div>
+    <div class="col-8 col-lg-4">{{ company.name }}</div>
+    <div class="col-4 col-lg-2 text-muted">Description:</div>
+    <div class="col-8 col-lg-4">{{ company.description }}</div>
+    <div class="col-4 col-lg-2 text-muted">Website:</div>
+    <div class="col-8 col-lg-4">
+      <i class="bi bi-link-45deg"></i><a href="{{ company.website }}" target="_blank" title="company website">{{ company.website|truncatechars:30 }}</a>
+    </div>
+    <div class="col-4 col-lg-2 text-muted">Phone:</div>
+    <div class="col-8 col-lg-4">
+      <i class="bi bi-phone"></i> {{ company.phone }}
     </div>
   </div>
   {# manufactured_items #}
   {% if company.manufactured_items.count > 0 %}
     <a id="manufactured"></a>
-    <div class="panel mx-3 my-4">
+    <div class="panel m-3">
       <div class="panel-heading">
         <span class="h5">Items Manufactured</span>
       </div>
-      <div class="panel-content py-4">
+      <div class="panel-content pb-3">
         {% for item in company.manufactured_items.all %}
           <span class="ps-2 pe-4">
             <i class="bi bi-box2-fill item-text-color"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
@@ -63,11 +49,11 @@
   {# supplied_items #}
   {% if company.supplied_items.count > 0 %}
     <a id="supplied"></a>
-    <div class="panel mx-3 my-4">
+    <div class="panel m-3">
       <div class="panel-heading">
         <span class="h5">Items Supplied</span>
       </div>
-      <div class="panel-content py-4">
+      <div class="panel-content pb-3">
         {% for item in company.supplied_items.all %}
           <span class="ps-2 pe-4">
             <i class="bi bi-box2-fill text-success"></i> <a href="{% url 'item_detail' item.pk %}" title="View item">{{ item.name }}</a>
