generic and model specific search views

--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -21,7 +21,7 @@
     <div class="col-6 col-lg-2 text-muted">Name:</div>
     <div class="col-6 col-lg-4">{{ location.name }}</div>
     <div class="col-6 col-lg-2 text-muted">Room:</div>
-    <div class="col-6 col-lg-4">{{ location.room_name }}</div>
+    <div class="col-6 col-lg-4">{{ location.room.name }}</div>
     <div class="col-12 col-lg-2 text-muted">Description:</div>
     <div class="col-12 col-lg-10">{{ location.description }}</div>
   </div>
