--- a/company/templates/company/company_search_results.html
+++ b/company/templates/company/company_search_results.html
@@ -1,3 +1,3 @@
-{% for company in found_companies %}
+{% for company in search_results %}
   <a href="javascript:" class="list-group-item list-group-item-action company-search-result-{{ company_type }}" company-pk={{ company.pk }}>{{ company }}</a>
 {% endfor %}
