--- a/item/templates/inhouse/partials/search_results.html
+++ b/item/templates/inhouse/partials/search_results.html
@@ -1,3 +1,3 @@
-{% for inhouse in found_inhouse_reagents %}
+{% for inhouse in search_results %}
   <a href="javascript:" class="list-group-item list-group-item-action inhouse-search-result-inhouse" inhouse-pk={{ inhouse.pk }}>{{ inhouse.name }}</a>
 {% endfor %}
