--- a/item/templates/item/partials/search_results.html
+++ b/item/templates/item/partials/search_results.html
@@ -1,3 +1,3 @@
-{% for item in found_items %}
+{% for item in search_results %}
   <a href="javascript:" class="list-group-item list-group-item-action item-search-result-item" item-pk={{ item.pk }}>{{ item.name }}</a>
 {% endfor %}
