--- a/item/templates/stock/partials/search_results.html
+++ b/item/templates/stock/partials/search_results.html
@@ -1,3 +1,3 @@
-{% for stock in found_stocks %}
+{% for stock in search_results %}
   <a href="javascript:" class="list-group-item list-group-item-action stock-search-result-stock" stock-pk={{ stock.pk }}>{{ stock.source.name }}-{{ stock.lot_number }}</a>
 {% endfor %}
