--- a/templates/partials/navbar_search_box.html
+++ b/templates/partials/navbar_search_box.html
@@ -9,15 +9,13 @@
             hx-target="#search-results-panel"
             hx-trigger="keyup delay:500ms, submit">
         <div class="input-group">
-          <span class="input-group-text bg-white"
-                style="border-right: 0;
-                       padding-right: 1px;"><i class="bi bi-search text-primary"></i></span>
+          <span class="input-group-text bg-white" style="border-right: 0;"><i class="bi bi-search text-primary"></i></span>
           <input class="form-control"
                  type="search"
                  placeholder="Search..."
                  autocomplete="off"
                  name="query"
-                 style="border-left: 0;">
+                 style="border-left: 0">
         </div>
       </form>
     </div>
