--- a/static/css/reagentree-1.0.css
+++ b/static/css/reagentree-1.0.css
@@ -153,6 +153,9 @@ a:hover {
 .inhouse-text-color {
   color: var(--rt-inhouse);
 }
+.inhousereagent-text-color {
+  color: var(--rt-inhouse);
+}
 .location-text-color {
   color: var(--rt-location);
 }
